package(default_visibility = ["//visibility:public"])

sources()

scala_library(
    name = "testkit",
    srcs = [
        ":sources",
    ],
    deps = [
        "//core/src/main/scala/com/wixpress/dst/greyhound/core",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/metrics",
        "@dev_zio_zio_2_12",
        "@org_apache_curator_curator_test",
        "@org_apache_kafka_kafka241_2_12",
        "@org_apache_kafka_kafka_2_12",
        "@org_apache_kafka_kafka_clients241",
    ],
)
