package(default_visibility = ["//visibility:public"])

# visibility is extended to allow packaging a jar to deploy to maven central
sources(["//core:__subpackages__"])

scala_library(
    name = "testkit",
    srcs = [
        ":sources",
    ],
    plugins = ["@com_kubukoz_better_tostring_{}".format(scala_version_dependency)],
    deps = [
        "@dev_zio_zio_stacktracer_{}".format(scala_version_dependency),
        "//core/src/main/scala/com/wixpress/dst/greyhound/core",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/admin",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/metrics",
        #        "//core/src/main/scala/com/wixpress/dst/greyhound/core/producer",
        "@dev_zio_zio_{}".format(scala_version_dependency),
        "@dev_zio_zio_test_{}".format(scala_version_dependency),
        "@org_apache_curator_curator_test",
        "@org_apache_kafka_kafka_{}".format(scala_version_dependency),
        "@org_apache_kafka_kafka_clients",
    ],
)
