package(default_visibility = ["//visibility:public"])

# visibility is extended to allow packaging a jar to deploy to maven central
sources(["//core:__subpackages__"])

scala_library(
    name = "core",
    srcs = [
        ":sources",
    ],
    plugins = ["@com_kubukoz_better_tostring_2_12"],
    deps = [
        "@dev_zio_zio2_2_12",
        "@org_apache_kafka_kafka_clients",
    ],
)
