package(default_visibility = ["//visibility:public"])

sources()

specs2_ite2e_test(
    name = "future",
    size = "large",
    testonly = 1,
    srcs = [
        ":sources",
    ],
    deps = [
        "//core/src/test/resources",
        "//core/src/it/scala/com/wixpress/dst/greyhound/testkit",
        "//core/src/test/scala/com/wixpress/dst/greyhound/core/testkit",
        "//future-interop/src/main/scala/com/wixpress/dst/greyhound/future",
        "@ch_qos_logback_logback_classic",
        "@dev_zio_zio_2_12",
        "@org_apache_kafka_kafka_clients241",
    ],
)
