package(default_visibility = ["//visibility:public"])

# visibility is extended to allow packaging a jar to deploy to maven central
sources(["//future-interop:__subpackages__"])

scala_library(
    name = "future",
    srcs = [
        ":sources",
    ],
    tags = [
        "no-index",
        "no-tool",
    ],
    deps = [
        "//core/src/main/scala/com/wixpress/dst/greyhound/core",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/admin",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/consumer",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/consumer/domain",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/consumer/retry",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/metrics",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/producer",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/zioutils",
        "@dev_zio2_izumi_reflect_2_12",
        "@dev_zio_zio2_2_12",
    ],
)
