package(default_visibility = ["//visibility:public"])

sources()

scala_library(
    name = "java",
    srcs = [
        ":sources",
    ],
    deps = [
        "//core/src/main/scala/com/wixpress/dst/greyhound/core",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/producer",
        "//future-interop/src/main/scala/com/wixpress/dst/greyhound/future",
        "@org_apache_kafka_kafka_clients241",
    ],
)
