package(default_visibility = ["//visibility:public"])

# visibility is extended to allow packaging a jar to deploy to maven central
sources(["//java-interop:__subpackages__"])

scala_library(
    name = "java",
    srcs = [
        ":sources",
    ],
    deps = [
        "//core/src/main/scala/com/wixpress/dst/greyhound/core",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/producer",
        "//future-interop/src/main/scala/com/wixpress/dst/greyhound/future",
        "@org_apache_kafka_kafka_clients",
    ],
)
