package(default_visibility = ["//visibility:public"])

# visibility is extended to allow packaging a jar to deploy to maven central
sources(["//java-interop:__subpackages__"])

scala_library(
    name = "java",
    srcs = [
        ":sources",
    ],
    tags = [
        "no-index",
        "no-tool",
    ],
    deps = [
        "//core/src/main/scala/com/wixpress/dst/greyhound/core",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/consumer/domain",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/consumer/retry",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/producer",
        "//future-interop/src/main/scala/com/wixpress/dst/greyhound/future",
        "@org_apache_kafka_kafka_clients",
    ],
)
