package(default_visibility = ["//visibility:public"])

sources()

java_library(
    name = "java",
    testonly = 1,
    srcs = [
        ":sources",
    ],
    deps = [
        "//java-interop/src/main/java/com/wixpress/dst/greyhound/java",
        "//java-interop/src/main/java/com/wixpress/dst/greyhound/scala",
        "//java-interop/src/test/java/com/wixpress/dst/greyhound/java/testkit",
        "@junit_junit",
        "@org_apache_kafka_kafka_clients",
    ],
)

java_test(
    name = "GreyhoundBuilderTest",
    size = "small",
    testonly = 1,
    runtime_deps = [
        ":java",
    ],
)
