package(default_visibility = ["//visibility:public"])

# visibility is extended to allow packaging a jar to deploy to maven central
sources(["//core:__subpackages__"])

specs2_ite2e_test(
    name = "batched",
    srcs = [
        ":sources",
    ],
    jvm_flags = [
        "-Dwix.app.id=com.wixpress.it",
        "-Dwix.app.version=fixed.version-SNAPSHOT",
    ],
    deps = [
        "@dev_zio_izumi_reflect_{}".format(scala_version_dependency),
        "@dev_zio_zio_managed_{}".format(scala_version_dependency),
        "//core/src/it/resources",
        "//core/src/it/scala/com/wixpress/dst/greyhound/testenv",
        "//core/src/it/scala/com/wixpress/dst/greyhound/testkit",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/consumer",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/consumer/batched",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/consumer/domain",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/metrics",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/producer",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/zioutils",
        "//core/src/test/scala/com/wixpress/dst/greyhound/core/testkit",
        # "@dev_zio_izumi_reflect_{}".format(scala_version_dependency),
        "@dev_zio_zio_{}".format(scala_version_dependency),
        "@org_apache_kafka_kafka_clients",
    ],
)
