package(default_visibility = ["//visibility:public"])

# visibility is extended to allow packaging a jar to deploy to maven central
sources(["//core:__subpackages__"])

scala_library(
    name = "admin",
    srcs = [
        ":sources",
    ],
    deps = [
        "//core/src/main/scala/com/wixpress/dst/greyhound/core",
        "@org_apache_kafka_kafka_clients",
    ],
)
