package(default_visibility = ["//visibility:public"])

# visibility is extended to allow packaging a jar to deploy to maven central
sources(["//core:__subpackages__"])

scala_library(
    name = "admin",
    srcs = [
        ":sources",
    ],
    deps = [
        "//core/src/main/scala/com/wixpress/dst/greyhound/core",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/metrics",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/zioutils",
        "@dev_zio_zio_{}".format(scala_version_dependency),
        "@dev_zio_zio_stacktracer_{}".format(scala_version_dependency),
        #        "@org_apache_kafka_kafka_{}".format(scala_version_dependency),
        "@org_apache_kafka_kafka_clients",
    ],
)
