package(default_visibility = ["//visibility:public"])

sources()

scala_library(
    name = "consumer",
    srcs = [
        ":sources",
    ],
    deps = [
        "//core/src/main/scala/com/wixpress/dst/greyhound/core",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/metrics",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/producer",
        "@dev_zio_zio_2_12",
        "@dev_zio_zio_streams_2_12",
        "@org_apache_kafka_kafka241_2_12",
        "@org_apache_kafka_kafka_clients241",
    ],
)
