package(default_visibility = ["//visibility:public"])

# visibility is extended to allow packaging a jar to deploy to maven central
sources(["//core:__subpackages__"])

scala_library(
    name = "consumer",
    srcs = [
        ":sources",
    ],
    plugins = ["@com_kubukoz_better_tostring_2_12"],
    deps = [
        "//core/src/main/scala/com/wixpress/dst/greyhound/core",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/admin",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/consumer/domain",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/consumer/retry",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/metrics",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/producer",
        "@dev_zio_zio_2_12",
        "@org_apache_kafka_kafka_2_12",
        "@org_apache_kafka_kafka_clients",
        "@org_scalaz_scalaz_zio_2_12",
    ],
)
