package(default_visibility = ["//visibility:public"])

# visibility is extended to allow packaging a jar to deploy to maven central
sources(["//core:__subpackages__"])

scala_library(
    name = "consumer",
    srcs = [
        ":sources",
    ],
    plugins = ["@com_kubukoz_better_tostring_2_12"],
    deps = [
        "@dev_zio_izumi_reflect_2_12",
        "@dev_zio_zio_stacktracer_2_12",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/admin",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/consumer/domain",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/consumer/retry",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/metrics",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/producer",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/zioutils",
        # "@dev_zio_izumi_reflect_2_12",
        "@dev_zio_zio_2_12",
        "@org_apache_kafka_kafka_clients",
    ],
)
