package(default_visibility = ["//visibility:public"])

# visibility is extended to allow packaging a jar to deploy to maven central
sources(["//core:__subpackages__"])

scala_library(
    name = "metrics",
    srcs = [
        ":sources",
    ],
    plugins = [
        "@org_scalamacros_paradise_2_12",
    ],
    deps = [
        "@dev_zio_zio_2_12",
        "@dev_zio_zio_macros_core_2_12",
        "@org_apache_kafka_kafka_clients",
        "@org_slf4j_slf4j_api",
    ],
)
