package(default_visibility = ["//visibility:public"])

# visibility is extended to allow packaging a jar to deploy to maven central
sources(["//core:__subpackages__"])

scala_library(
    name = "metrics",
    srcs = [
        ":sources",
    ],
    deps = [
        "@dev_zio_izumi_reflect_{}".format(scala_version_dependency),
        # "@dev_zio_izumi_reflect_{}".format(scala_version_dependency),
        "@dev_zio_zio_{}".format(scala_version_dependency),
        "@dev_zio_zio_stacktracer_{}".format(scala_version_dependency),
        "@org_apache_kafka_kafka_clients",
        "@org_slf4j_slf4j_api",
    ],
)
