package(default_visibility = ["//visibility:public"])

sources()

scala_library(
    name = "producer",
    srcs = [
        ":sources",
    ],
    deps = [
        "//core/src/main/scala/com/wixpress/dst/greyhound/core",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/metrics",
        "@dev_zio_zio_2_12",
        "@org_apache_kafka_kafka_clients241",
    ],
)
