package(default_visibility = ["//visibility:public"])

# visibility is extended to allow packaging a jar to deploy to maven central
sources(["//core:__subpackages__"])

scala_library(
    name = "producer",
    srcs = [
        ":sources",
    ],
    plugins = ["@com_kubukoz_better_tostring_2_12"],
    deps = [
        "//core/src/main/scala/com/wixpress/dst/greyhound/core",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/metrics",
        "@dev_zio2_izumi_reflect_2_12",
        "@dev_zio_zio2_2_12",
        "@dev_zio_zio2_managed_2_12",
        "@org_apache_kafka_kafka_clients",
    ],
)
