package(default_visibility = ["//visibility:public"])

sources()

scala_library(
    name = "serialization",
    srcs = [
        ":sources",
    ],
    deps = [
        "//data-streams/greyhound/core/src/main/scala/com/wixpress/dst/greyhound/core",
        "@dev_zio_zio_2_12",
        "@org_apache_kafka_kafka_clients",
    ],
)
